--- a/SistemaVentasBatia/ClientApp/src/app/widgets/material/material.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/material/material.widget.html
@@ -8,7 +8,8 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title text-capitalize">{{ tipo }}</h4>
+                    <!--<h4 class="modal-title text-capitalize">{{ tipo }}</h4>-->
+                    <h4  class="modal-title">{{ tipo }} - <small class="text-muted">{{ puesto }} ({{ nombreSucursal }})</small></h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Modal body -->
