--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
@@ -153,7 +153,7 @@
                     <div class="row mb-3">
                         <div class="col-sm-12 col-md-6">
                             <div class="form-floating">
-                                <select class="form-select  box-shadow" name="tipoServicio" (change)="chgServicio()" [(ngModel)]="tipoServicio" disabled id="txtTipoServisioCatalogo">
+                                <select class="form-select" name="tipoServicio" (change)="chgServicio()" [(ngModel)]="tipoServicio" disabled id="txtTipoServisioCatalogo">
                                     <option value="0">Seleccione una opción</option>
                                     <option *ngFor="let s of tser" [ngValue]="s.id">{{ s.descripcion }}</option>
                                 </select>
@@ -173,34 +173,36 @@
                     </ul>
                     <div class="tab-content pt-2" id="tabcontent">
                         <div class="tab-pane fade show active text-center" style="border-radius: 10px; overflow-x: hidden;" id="servicio" role="tabpanel" aria-labelledby="material-tab">
-                            <table class="table table-borderless table-striped table-responsive">
-                                <thead>
-                                    <tr>
-                                        <th>Clave</th>
-                                        <th>Descripción</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr *ngFor="let s of sers">
-                                        <td>{{ s.id }}</td>
-                                        <td>{{ s.descripcion }}</td>
-                                        <td>
-                                            <button type="button" (click)="deleteServ(s.id)" class="btn btn-sm btn-outline-danger">
-                                                <i class="fa-solid fa-trash"></i>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div class="row">
-                                <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openSer()" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar servicio</button>
+                            <div *ngIf="sers && sers.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 300px; overflow-y: auto;" class="box-shadow fade-in-container">
+                                <table class="table table-striped table-responsive">
+                                    <thead class="sticky-top">
+                                        <tr>
+                                            <th>Clave</th>
+                                            <th>Descripción</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let s of sers">
+                                            <td>{{ s.id }}</td>
+                                            <td>{{ s.descripcion }}</td>
+                                            <td>
+                                                <button type="button" (click)="deleteServ(s.id)" class="btn btn-sm btn-outline-danger">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                                 </div>
+                                <div class="row">
+                                    <div class="col d-flex justify-content-end">
+                                        <button type="button" (click)="openSer()" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar servicio</button>
+                                    </div>
+                                </div>
+                                <br>
                             </div>
-                            <br>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -258,8 +260,8 @@
                     </ul>
                     <div class="tab-content pt-2" id="tabcontent">
                         <div class="tab-pane fade show active" style="border-radius: 10px; overflow-x: hidden;" id="material" role="tabpanel" aria-labelledby="material-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
-                                <table class="table table-borderless table-striped table-responsive">
+                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                                <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
                                             <th><div class="col-md-2 col-sm-6 col-2">Clave</div></th>
@@ -292,7 +294,7 @@
                             <br>
                         </div>
                         <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden;" id="uniforme" role="tabpanel" aria-labelledby="uniforme-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
                                 <table class="table table-borderless table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
@@ -320,14 +322,14 @@
                             <br />
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openUni(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary  box-shadow" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar uniforme</button>
+                                    <button type="button" (click)="openUni(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar uniforme</button>
                                 </div>
                             </div>
                             <br>
                         </div>
                         <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden;" id="equipo" role="tabpanel" aria-labelledby="equipo-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
-                                <table class="table table-borderless table-striped table-responsive">
+                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                                <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
                                             <th><div class="col-md-2 col-sm-6 col-2">Clave</div></th>
@@ -354,15 +356,15 @@
                             <br />
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openEqui(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary  box-shadow" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar equipo</button>
+                                    <button type="button" (click)="openEqui(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar equipo</button>
                                 </div>
                             </div>
                             <br>
                         </div>
                         <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden;" id="herramienta" role="tabpanel" aria-labelledby="herramienta-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
 
-                                <table class="table table-borderless table-striped table-responsive">
+                                <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
                                             <th><div class="col-md-2 col-sm-6 col-2">Clave</div></th>
@@ -433,7 +435,7 @@
                                             <div class="row">
                                                 <div class="col-412 col-md-12 col-sm-12 mt-2 align-content-end text-end">
                                                     <div>
-                                                        <button (click)="actualizarSalarios(sal.idPuesto)" class="btn btn-lg btn-outline-success  box-shadow"><i class="fa-solid fa-save"></i> Guardar</button>
+                                                        <button (click)="actualizarSalarios(sal.idPuesto)" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -455,7 +457,7 @@
             </h1>
             <div id="collapseUsuario" class="accordion-collapse collapse" aria-labelledby="headingUsuario">
                 <div class="accordion-body">
-                    <div *ngIf="lusu && lusu.length > 0" class="fade-in-container" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                    <div *ngIf="lusu && lusu.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
                         <table class="table table-striped table-responsive">
                             <thead class="sticky-top">
                                 <tr class="d-md-none">
@@ -529,7 +531,7 @@
                     <br />
                     <div class="row">
                         <div class="col d-flex justify-content-end">
-                            <button type="button" (click)="openUsu(0)" class="btn btn-lg btn-outline-primary  box-shadow" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
+                            <button type="button" (click)="openUsu(0)" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
                         </div>
                     </div>
                     <br>
@@ -583,7 +585,7 @@
                     <div *ngIf="isLoading" class="text-center ">
                         <i class="fas fa-spinner fa-spin fa-3x"></i>
                     </div>
-                    <div *ngIf="model.productos && model.productos.length > 0" class="fade-in-container" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                    <div *ngIf="model.productos && model.productos.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
                         <table class="table table-striped table-responsive" style="border-radius: 10px; overflow-x: hidden;">
                             <thead class="sticky-top">
                                 <tr class="d-md-none">
@@ -647,7 +649,7 @@
                     </div>
                     <!--<div class="row">
                         <div class="col d-flex justify-content-end">
-                            <button type="button" (click)="openUsu(0)" class="btn btn-lg btn-outline-primary  box-shadow" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
+                            <button type="button" (click)="openUsu(0)" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
                         </div>
                     </div>-->
                     <br>
