--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
@@ -10,7 +10,7 @@
             <div class="col-md-3 mb-3">
                 <div class="form-floating">
                     <select class="form-select" asp-for="IdProspecto" [(ngModel)]="lcots.idProspecto" (change)="busca()" id="ddlProspecto">
-                        <option value="0">Selecciona una opción...</option>
+                        <option value="0">Seleccione...</option>
                         <option *ngFor="let p of lpros" [ngValue]="p.idProspecto">{{ p.nombreComercial }}</option>
                     </select>
                     <label for="ddlProspecto">Prospecto</label>
@@ -19,7 +19,7 @@
             <div class="col-md-3 col-6 mb-3">
                 <div class="form-floating">
                     <select class="form-select" [(ngModel)]="lcots.idServicio" (change)="busca()" id="ddlServicio">
-                        <option value="0">Selecciona una opción...</option>
+                        <option value="0">Seleccione...</option>
                         <option *ngFor="let s of lsers" [ngValue]="s.id">{{ s.nom }}</option>
                     </select>
                     <label for="ddlServicio">Servicio</label>
@@ -28,7 +28,7 @@
             <div class="col-md-3 col-6 mb-3">
                 <div class="form-floating">
                     <select class="form-select" [(ngModel)]="lcots.idEstatusCotizacion" (change)="busca()" id="ddlEstatus">
-                        <option value="0">Selecciona una opción...</option>
+                        <option value="0">Seleccione...</option>
                         <option *ngFor="let e of lests" [ngValue]="e.id">{{ e.nom }}</option>
                     </select>
                     <label for="ddlEstatus">Estatus</label>
@@ -52,8 +52,8 @@
     <div *ngIf="isLoading" class="text-center ">
         <i class="fas fa-spinner fa-spin fa-3x"></i>
     </div>
-    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="row fade-in-container" style="border-radius: 10px; overflow-x: hidden;">
-        <table class="table table-borderless table-striped table-responsive">
+    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 500px; overflow-y: auto;" class="box-shadow fade-in-container">
+        <table class="table table-striped table-responsive">
             <thead class="sticky-top">
                 <tr class="d-md-none">
                     <th class="ps-2 text-start">Lista de cotizaciones</th>
@@ -119,11 +119,8 @@
                         <button type="button" class="btn btn-sm btn-outline-primary" [routerLink]="['/exclusivo/resumen/' + cot.idCotizacion]" data-bs-toggle="tooltip" title="Detalle">
                             <i class="fa-solid fa-search-dollar fa-2x"></i>
                         </button>
-                        <a *ngIf="cot.total == 0" class="btn btn-sm btn-outline-success" (click)="editar(cot.idCotizacion, cot.nombreComercial,cot.servicio)" data-bs-toggle="tooltip" title="Editar">
+                        <a class="btn btn-sm btn-outline-success" (click)="editar(cot.idCotizacion,cot.servicio)" data-bs-toggle="tooltip" title="Editar tipo de servicio">
                             <i class="fa-solid fa-pencil fa-2x"></i>
-                        </a>
-                        <a *ngIf="cot.total !== 0" class="btn btn-sm text-white" data-bs-toggle="tooltip" title="Editar" disabled>
-                            <i class="fa-solid fa-pencil fa-2x" style="color: #ccc;"></i>
                         </a>
                         <button id="statusButton" (click)="chgEstatus(cot.idCotizacion, cot.idEstatusCotizacion)" class="toggle-btn {{ cot.idEstatusCotizacion === 1 ? 'active' : '' }}">
                             {{ cot.idEstatusCotizacion === 1 ? 'Activa' : 'Inactiva' }}
@@ -135,8 +132,11 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <br />
+    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="fade-in-container">
         <pagina-widget [pagina]="lcots.pagina" [numPaginas]="lcots.numPaginas" [rows]="lcots.rows" (chgEvent)="muevePagina($event)"></pagina-widget>
     </div>
 </div>
 <elimina-widget [titulo]="" [mensaje]="" (ansEvent)="elimina($event)"></elimina-widget>
-<editcot-widget (ansEvent)="elimina($event)"></editcot-widget>
+<editcot-widget (editCot)="init()"></editcot-widget>
