--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-3 col-7 mb-3">
                 <div class="form-floating">
-                    <input type="text" class="form-control" [(ngModel)]="lspro.keywords" id="Keywords" placeholder="Escriba un nombre" (input)="lista()">
+                    <input type="text" class="form-control" [(ngModel)]="lspro.keywords" id="Keywords" (input)="lista()">
                     <label for="Keywords">Nombre Comercial</label>
                 </div>
             </div>
@@ -40,9 +40,9 @@
     <div *ngIf="isLoading" class="text-center ">
         <i class="fas fa-spinner fa-spin fa-3x"></i>
     </div>
-    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class="row fade-in-container" style="border-radius: 10px; overflow-x: hidden;">
-        <table class="table table-borderless table-striped table-responsive">
-            <thead>
+    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 500px; overflow-y: auto; overflow-x: hidden" class="box-shadow fade-in-container">
+        <table class="table table-striped table-responsive">
+            <thead class="sticky-top">
                 <tr>
                     <th class="ps-2">Lista de prospectos</th>
                     <th class="col-md-2"></th>
@@ -86,18 +86,21 @@
                         <button type="submit" class="btn btn-sm btn-outline-primary mb-1" [routerLink]="['/exclusivo/cotiza/' + prospecto.idProspecto]" data-bs-toggle="tooltip" title="Cotizaciones" [disabled]="prospecto.idEstatusProspecto !== 1">
                             <i class="fa-solid fa-file-invoice-dollar fa-2x"></i>
                         </button>
-                        <button id="statusButton" (click)="prospecto.idEstatusProspecto === 1 ? elige(prospecto.idProspecto) : activar(prospecto.idProspecto)" class="toggle-btn {{ prospecto.idEstatusProspecto === 1 ? 'active' : '' }}">
-                            {{ prospecto.idEstatusProspecto === 1 ? 'Activo' : 'Inactivo' }}
-                        </button>
                         <a class="btn btn-sm btn-outline-success mb-1" [routerLink]="['/exclusivo/prospecto/' + prospecto.idProspecto]" data-bs-toggle="tooltip" title="Editar">
                             <i class="fa-solid fa-pencil fa-2x"></i>
                         </a>
+                        <button id="statusButton" (click)="prospecto.idEstatusProspecto === 1 ? elige(prospecto.idProspecto) : activar(prospecto.idProspecto)" class="toggle-btn {{ prospecto.idEstatusProspecto === 1 ? 'active' : '' }}">
+                            {{ prospecto.idEstatusProspecto === 1 ? 'Activo' : 'Inactivo' }}
+                        </button>
                     </td>
-
                 </tr>
             </tbody>
         </table>
+    </div>
+    <br />
+    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class="fade-in-container">
         <pagina-widget [pagina]="lspro.pagina" [numPaginas]="lspro.numPaginas" [rows]="lspro.rows" (chgEvent)="muevePagina($event)"></pagina-widget>
+
     </div>
 </div>
-    <elimina-widget [titulo]="" [mensaje]="" (ansEvent)="desactivar()"></elimina-widget>
+<elimina-widget [titulo]="" [mensaje]="" (ansEvent)="desactivar()"></elimina-widget>
