--- a/SistemaVentasBatia/ClientApp/src/app/widgets/materialadd/materialadd.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/materialadd/materialadd.widget.html
@@ -7,9 +7,17 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 *ngIf="model.idMaterialCotizacion == 0" class="modal-title">Agregar {{ tipo }}</h4>
-                    <h4 *ngIf="model.idMaterialCotizacion > 0" class="modal-title">Modificar {{ tipo }}</h4>
+                <div *ngIf="nombreSucursal != undefined" class="modal-header">
+                    <h4 *ngIf="model.idMaterialCotizacion == 0" class="modal-title">Agregar {{ tipo }} - <small class="text-muted">{{ puesto }} ({{ nombreSucursal }})</small></h4>
+                    <!--<h4  class="modal-title">Agregar {{ tipo }}</h4>-->
+                    <!--<h4 *ngIf="model.idMaterialCotizacion > 0" class="modal-title">Editar {{ tipo }}</h4>-->
+                    <h4 *ngIf="model.idMaterialCotizacion > 0" class="modal-title">Editar {{ tipo }} - <small class="text-muted">{{ puesto }} ({{ nombreSucursal }})</small></h4>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div *ngIf="isExtra" class="modal-header">
+                    <h4 class="modal-title">Agregar {{ tipo }}</h4>
+
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Modal body -->
