--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
@@ -8,7 +8,8 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Agregar puesto</h4>
+                    <h4 *ngIf="puesto == undefined" class="modal-title">Agregar puesto <small class="text-muted text-capitalize">{{ nombreSucursal }}</small></h4>
+                    <h4 *ngIf="puesto != undefined" class="modal-title">Editar puesto <small class="text-muted text-capitalize">{{ nombreSucursal }}</small></h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Modal body -->
