--- a/SistemaVentasBatia/ClientApp/src/app/widgets/prospecto/prospecto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/prospecto/prospecto.widget.html
@@ -101,4 +101,4 @@
         </div>
     </div>
 </div>
-<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>
+<!--<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>-->
