--- a/SistemaVentasBatia/ClientApp/src/app/colectivo/login/login.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/colectivo/login/login.component.html
@@ -6,8 +6,8 @@
             </div>
             <div class="col-12 col-md-5">
                 <div class="card login-card  card" (keydown)="review($event)">
-                    <h3 class="card-header text-center card-headercss">Sistema Integral de Gestion Administrativa (CRM)</h3>
-                    <div class="card-body">
+                    <h3 class="text-center card-headercss">Sistema Integral de Gestion Administrativa (CRM)</h3>
+                    <div class="card-bodycss">
                         <div class="mb-2">
                             <div class="form-floating">
                                 <input type="text" class="form-control my-input-class" [(ngModel)]="model.usuario" id="txusuario" placeholder="Usuario">
@@ -26,7 +26,7 @@
                     <div class=" text-start card-footercss">
                         <button type="button" (click)="onLogin()" class="btn btn-primary box-shadow" isDefault="true">
                             Ingresar 
-                            <i *ngIf="isLoading" class="fas fa-spinner fa-spin fa-1x"></i>
+                            <i *ngIf="isLoading" class="fa-spinner fa-spin fa-1x"></i>
                             <i *ngIf="isLoading == false" class="fa-solid fa-right-to-bracket"></i>
                         </button>
                     </div>
