--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
@@ -1,13 +1,18 @@
 <div [@fadeInOut]>
     <br />
-    <div *ngIf="autorizacion === 1" class="row pt-1 mb-3">
+    <div *ngIf="user.idAutoriza == 1 && user.idSupervisa == 1" class="row pt-1 mb-3">
         <div>
             <h1 class="h2">Configuración</h1>
         </div>
     </div>
+    <div *ngIf="user.idAutoriza == 0 && user.idSupervisa == 0" class="row pt-1 mb-3">
+        <div>
+            <h1 class="h2">Reportes</h1>
+        </div>
+    </div>
     <div class="accordion box-shadow" id="accordionExample">
         <!--Pestaña 0-->
-        <div class="accordion-item">
+        <div *ngIf="user.idAutoriza == 1 && user.idSupervisa == 1" class="accordion-item">
             <h1 class="accordion-header" id="headingCotizacion">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCotizacion" aria-expanded="false" aria-controls="collapseCotizacion">
                     Cotización
@@ -62,7 +67,7 @@
                                 </div>
                                 <div class="col-sm-3 col-6 pb-3 text-center">
                                     <span class="badge"></span>
-                                    <button type="button" (click)="actualizarPorcentajesPredeterminadosCotizacion()" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+                                    <button type="button" (click)="actualizarPorcentajesPredeterminadosCotizacion()" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
                                 </div>
 
                             </div>
@@ -124,7 +129,7 @@
                                 </div>
                                 <div class="col-sm-3 col-6 pb-3 text-center">
                                     <span class="badge"></span>
-                                    <button type="button" (click)="actualizarImmsJornada()" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+                                    <button type="button" (click)="actualizarImmsJornada()" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
                                 </div>
                                 <!--<div class="col-sm-3 col-3 pb-3">
         <span class="badge">IMSS Base (MXN):</span>
@@ -132,7 +137,7 @@
     </div>
     <div class="col-sm-3 col-3 text-center">
         <span class="badge"></span>
-        <button type="button" (click)="updImss()" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+        <button type="button" (click)="updImss()" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
     </div>-->
                             </div>
                         </div>
@@ -141,7 +146,7 @@
             </div>
         </div>
         <!--Pestaña 1-->
-        <div class="accordion-item">
+        <div *ngIf="user.idAutoriza == 1 && user.idSupervisa == 1" class="accordion-item">
             <h1 class="accordion-header" id="headingCatalogo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCatalogo" aria-expanded="false" aria-controls="collapseCatalogo">
                     Catálogos
@@ -173,7 +178,7 @@
                     </ul>
                     <div class="tab-content pt-2" id="tabcontent">
                         <div class="tab-pane fade show active text-center" style="border-radius: 10px; overflow-x: hidden;" id="servicio" role="tabpanel" aria-labelledby="material-tab">
-                            <div *ngIf="sers && sers.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 300px; overflow-y: auto;" class="box-shadow fade-in-container">
+                            <div *ngIf="sers && sers.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 300px; overflow-y: auto;" class="fade-in-container">
                                 <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
@@ -195,9 +200,9 @@
                                     </tbody>
                                 </table>
                                 </div>
-                                <div class="row">
+                                <div class="row mt-3">
                                     <div class="col d-flex justify-content-end">
-                                        <button type="button" (click)="openSer()" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar servicio</button>
+                                        <button type="button" (click)="openSer()" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar servicio</button>
                                     </div>
                                 </div>
                                 <br>
@@ -207,7 +212,7 @@
             </div>
         </div>
         <!-- Pestaña 2 -->
-        <div class="accordion-item">
+        <div *ngIf="user.idAutoriza == 1 && user.idSupervisa == 1" class="accordion-item">
             <h1 class="accordion-header" id="headingMaterial">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMaterial" aria-expanded="false" aria-controls="collapseMaterial">
                     Puestos
@@ -288,7 +293,7 @@
                             <br />
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openMat(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar producto</button>
+                                    <button type="button" (click)="openMat(0)" [disabled]="selPuesto == 0" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar producto</button>
                                 </div>
                             </div>
                             <br>
@@ -322,7 +327,7 @@
                             <br />
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openUni(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar uniforme</button>
+                                    <button type="button" (click)="openUni(0)" [disabled]="selPuesto == 0" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar uniforme</button>
                                 </div>
                             </div>
                             <br>
@@ -356,7 +361,7 @@
                             <br />
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openEqui(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar equipo</button>
+                                    <button type="button" (click)="openEqui(0)" [disabled]="selPuesto == 0" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar equipo</button>
                                 </div>
                             </div>
                             <br>
@@ -391,7 +396,7 @@
                             <br />
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button type="button" (click)="openHer(0)" [disabled]="selPuesto == 0" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar herramienta</button>
+                                    <button type="button" (click)="openHer(0)" [disabled]="selPuesto == 0" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar herramienta</button>
                                 </div>
                             </div>
                             <br>
@@ -432,24 +437,25 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row">
-                                                <div class="col-412 col-md-12 col-sm-12 mt-2 align-content-end text-end">
-                                                    <div>
-                                                        <button (click)="actualizarSalarios(sal.idPuesto)" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
-                                                    </div>
-                                                </div>
-                                            </div>
+
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
+                            <div class="row text-end">
+                                <div class="col-12 col-md-12 col-sm-12 mt-2 align-content-end text-end">
+                                    <div>
+                                        <button (click)="actualizarSalarios(sal.idPuesto)" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!--Pestaña 3-->
-        <div *ngIf="autorizacion === 1" class="accordion-item">
+        <div *ngIf="user.idAutoriza == 1 && user.idSupervisa == 1" class="accordion-item">
             <h1 class="accordion-header" id="headingUsuario">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUsuario" aria-expanded="false" aria-controls="collapseUsuario">
                     Usuarios
@@ -516,10 +522,10 @@
                                         </div>
                                     </td>
                                     <td class="w-auto">
-                                        <button type="button" (click)="openUsu(u.idPersonal)" class="btn btn-lg btn-outline-info btn-con-espacio-izquierdo">
+                                        <button type="button" (click)="openUsu(u.idPersonal)" class="btn  btn-outline-info btn-con-espacio-izquierdo">
                                             <i class="fa-solid fa-edit"></i>
                                         </button>
-                                        <button type="button" (click)="confirmarEliminarUsuario(u.idPersonal)" class="btn btn-lg btn-outline-danger btn-con-espacio-izquierdo">
+                                        <button type="button" (click)="confirmarEliminarUsuario(u.idPersonal)" class="btn  btn-outline-danger btn-con-espacio-izquierdo">
                                             <i class="fa-solid fa-trash"></i>
                                         </button>
                                     </td>
@@ -531,7 +537,7 @@
                     <br />
                     <div class="row">
                         <div class="col d-flex justify-content-end">
-                            <button type="button" (click)="openUsu(0)" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
+                            <button type="button" (click)="openUsu(0)" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
                         </div>
                     </div>
                     <br>
@@ -641,15 +647,15 @@
                         <pagina-widget [pagina]="model.pagina" [numPaginas]="model.numPaginas" [rows]="model.rows" (chgEvent)="muevePagina($event)"></pagina-widget>
                     </div>
                     <div *ngIf="model.productos && model.productos.length > 0">
-                        <div class="col-12 float-end col-md-3">
-                            <button type="button" id="btnProdDes" (click)="descargarListaProductosPorEstado()" class="btn btn-outline-info "><i class="fa-solid fa-download"></i> Descargar istado</button>
+                        <div class="col-12 float-end col-md-3 text-end">
+                            <button type="button" id="btnProdDes" (click)="descargarListaProductosPorEstado()" class="btn  btn-outline-info "><i class="fa-solid fa-download"></i> Descargar listado</button>
                             <span style="margin-right: 10px;"></span>
                         </div>
                         <br />
                     </div>
                     <!--<div class="row">
                         <div class="col d-flex justify-content-end">
-                            <button type="button" (click)="openUsu(0)" class="btn btn-lg btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
+                            <button type="button" (click)="openUsu(0)" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar Usuario</button>
                         </div>
                     </div>-->
                     <br>
