--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/nuevo/nuevo.component.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <span *ngIf="ferr('Prospecto')" class="text-danger">{{ terr('Prospecto') }}</span>
                             </div>
-                            <div class="col-sm-6 col-md-6 col-12">
+                            <div *ngIf="user.idAutoriza == 1" class="col-sm-6 col-md-6 col-12">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="idVendedor" name="IdVendedor" required>
                                         <option value="0">Seleccione</option>
@@ -89,7 +89,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>
+    <toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
 </body>
 
 <head>
@@ -128,7 +128,7 @@
                                     <input type="text" class="form-control validacion-prospecto" [(ngModel)]="modelp.rfc" data-campo="rfc" id="txtRFC">
                                     <label for="txtRFC">RFC</label>
                                 </div>
-                                <span *ngIf="ferr('Rfc')" class="text-danger">{{ terr('Rfc') }}</span>
+                                <span *ngIf="ferr('RFC')" class="text-danger">{{ terr('RFC') }}</span>
                             </div>
                         </div>
                         <div class="row">
@@ -201,10 +201,9 @@
                             </div>
                         </div>
                     </div>
-                    <hr />
                     <br />
-                    <h5>Vendedor</h5>
-                    <div class="row mb-3">
+                    <h5 *ngIf="user.idAutoriza == 1">Vendedor</h5>
+                    <div *ngIf="user.idAutoriza == 1" class="row mb-3">
                         <div class="col-sm-12 col-md-6">
                             <div class="form-floating">
                                 <select class="form-select" [(ngModel)]="idVendedor" name="IdVendedor" required>
@@ -252,5 +251,5 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>
 </body>
+<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
