--- a/SistemaVentasBatia/ClientApp/src/app/widgets/editacotizacion/editacotizacion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/editacotizacion/editacotizacion.widget.html
@@ -32,11 +32,11 @@
                             </div>-->
                             <div class="col-sm-12 col-md-12 col-12">
                                 <div class="form-floating">
-                                    <select class="form-select" [(ngModel)]="idServicio" name="IdServicio" id="ddlServicio">
+                                    <select class="form-select" [(ngModel)]="idServicio" name="IdServicio" id="ddlServicioEdit">
                                         <option value="0">Seleccione...</option>
                                         <option *ngFor="let s of sers" [ngValue]="s.id">{{ s.nom }}</option>
                                     </select>
-                                    <label for="ddlServicio">Servicio</label>
+                                    <label for="ddlServicioEdit">Servicio</label>
                                 </div>
                                 <span *ngIf="ferr('IdServicio')" class="text-danger">{{ terr('IdServicio') }}</span>
                             </div>
@@ -53,3 +53,4 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
