--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
@@ -1,7 +1,4 @@
-﻿<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+﻿
 <body>
     <div class="modal fade" id="modalAgregarOperario" data-bs-backdrop="static">
         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -16,7 +13,7 @@
                 <div class="modal-body">
                     <div>
                         <div class="row">
-                            <div class="col-sm-12 col-md-6 col-12 mb-3">
+                            <div class="col-sm-12 col-md-5 col-12 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" aria-label="IdPuesto" [(ngModel)]="model.idPuesto" (change)="chgSalariodos()" id="ddlPuesto">
                                         <option value="0">Seleccione...</option>
@@ -26,7 +23,7 @@
                                 </div>
                                 <span *ngIf="ferr('IdPuesto')" class="text-danger">{{ terr('IdPuesto') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-4 col-6  mb-3">
+                            <div class="col-sm-12 col-md-3 col-4  mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" aria-label="IdTurno" [(ngModel)]="model.idTurno" (change)="chgSalariodos()" id="ddlTurnoPuesto">
                                         <option value="0">Seleccione...</option>
@@ -36,19 +33,26 @@
                                 </div>
                                 <span *ngIf="ferr('IdTurno')" class="text-danger">{{ terr('IdTurno') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 col-6 mb-3">
+                            <div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.cantidad" id="txtCantidadPuesto">
                                     <label for="txtCantidadPuesto">Cantidad</label>
                                 </div>
                                 <span *ngIf="ferr('Cantidad')" class="text-danger">{{ terr('Cantidad') }}</span>
                             </div>
-
-
-
-
-                            <!--</div>
-                            <div class="row">-->
+                            <div class="col-sm-12 col-md-2 col-4 mb-3">
+                                <div class="form-floating">
+                                    <select class="form-select" [(ngModel)]="model.jornada" (change)="chgSalariodos()" id="ddlJornadaPuesto">
+                                        <option value="0">Seleccione...</option>
+                                        <option *ngFor="let j of ljor" [ngValue]="j.id">{{ j.descripcion }}</option>
+                                    </select>
+                                    <label for="ddlJornadaPuesto">Jornada</label>
+                                </div>
+                                <span *ngIf="ferr('Jornada')" class="text-danger">{{ terr('Jornada') }}</span>
+                            </div>
+                            <br />
+                            <h5>Horarios</h5>
+                            <hr />
                             <div class="col-sm-12 col-md-3 col-6 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" aria-label="DiaInicio" [(ngModel)]="model.diaInicio" id="ddlDiaInicioPuesto">
@@ -88,39 +92,77 @@
                                     <label for="ddlHrFinPuesto">A</label>
                                 </div>
                                 <span *ngIf="ferr('HrFin')" class="text-danger">{{ terr('HrFin') }}</span>
-                            </div>
-                            <!--</div>
-                            <div class="row">-->
-                            <!--<div class="col-sm-12 col-md-3">
+                            </div><div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
-                                    <input type="number" class="form-control" [(ngModel)]="model.jornada">
-                                    <label for="Jornada">Jornada</label>
-                                </div>
-                                <span *ngIf="ferr('Jornada')" class="text-danger">{{ terr('Jornada') }}</span>
-                            </div>-->
-                            <!--<div class="col-sm-12 col-md-3">
-                                <div class="form-floating">
-                                    <select class="form-select" aria-label="DiaFin" [(ngModel)]="model.diaFin">
-                                        <option value="0">Seleccione...</option>
+                                    <select class="form-select" aria-label="DiaInicio" [(ngModel)]="model.diaDescanso" id="ddlDiaDescansoPuesto">
+                                        <option value=0>Seleccione...</option>
                                         <option *ngFor="let d of dias" [ngValue]="d.id">{{ d.nom }}</option>
                                     </select>
-                                    <label for="DiaFin">Dia Fin</label>
+                                    <label for="ddlDiaDescansoPuesto">Dia Descanso</label>
                                 </div>
-                                <span *ngIf="ferr('DiaFin')" class="text-danger">{{ terr('DiaFin') }}</span>
-                            </div>-->
+                                <span *ngIf="ferr('DiaDescanso')" class="text-danger">{{ terr('DiaDescanso') }}</span>
+                            </div>
+
+
+
+
+
+
+
+                            <div class="col-sm-12 col-md-3 col-6 mb-3">
+                                <div class="form-floating">
+                                    <select class="form-select" aria-label="DiaInicio" [(ngModel)]="model.diaInicioFin" id="ddlDiaInicioFinPuesto">
+                                        <option value=0>Seleccione...</option>
+                                        <option *ngFor="let d of dias" [ngValue]="d.id">{{ d.nom }}</option>
+                                    </select>
+                                    <label for="ddlDiaInicioPuesto">Dia Inicio</label>
+                                </div>
+                                <!--<span *ngIf="ferr('DiaInicio')" class="text-danger">{{ terr('DiaInicio') }}</span>-->
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-6 mb-3">
+                                <div class="form-floating">
+                                    <select class="form-select" aria-label="DiaFin" [(ngModel)]="model.diaFinFin" id="ddlDiaFinFinPuesto">
+                                        <option value=0>Seleccione...</option>
+                                        <option *ngFor="let d of dias" [ngValue]="d.id">{{ d.nom }}</option>
+                                    </select>
+                                    <label for="ddlDiaFinPuesto">Dia Fin</label>
+                                </div>
+                                <!--<span *ngIf="ferr('DiaFin')" class="text-danger">{{ terr('DiaFin') }}</span>-->
+                            </div>
                             <div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
-                                    <select class="form-select" [(ngModel)]="model.jornada" (change)="chgSalariodos()" id="ddlJornadaPuesto">
-                                        <option value="0">Seleccione...</option>
-                                        <option *ngFor="let j of ljor" [ngValue]="j.id">{{ j.descripcion }}</option>
+                                    <select type="text" class="form-select" [(ngModel)]="model.hrInicioFin" id="ddlHrInicioFinPuesto">
+                                        <option value="00:00">Seleccione...</option>
+                                        <option *ngFor="let h of hors" [ngValue]="h">{{ h }}</option>
                                     </select>
-                                    <label for="ddlJornadaPuesto">Jornada</label>
+                                    <label for="ddlHrInicioPuesto">De</label>
                                 </div>
-                                <span *ngIf="ferr('Jornada')" class="text-danger">{{ terr('Jornada') }}</span>
+                                <!--<span *ngIf="ferr('HrInicio')" class="text-danger">{{ terr('HrInicio') }}</span>-->
                             </div>
+                            <div class="col-sm-12 col-md-2 col-4 mb-3">
+                                <div class="form-floating">
+                                    <select type="text" class="form-select" [(ngModel)]="model.hrFinFin" id="ddlHrFinFinPuesto">
+                                        <option value="00:00">Seleccione...</option>
+                                        <option *ngFor="let h of hors" [ngValue]="h">{{ h }}</option>
+                                    </select>
+                                    <label for="ddlHrFinPuesto">A</label>
+                                </div>
+                                <!--<span *ngIf="ferr('HrFin')" class="text-danger">{{ terr('HrFin') }}</span>-->
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
                             <br />
                             <h5>Sueldo</h5>
-                            <br />
+                            <hr />
                             <div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" aria-label="IdTabulador" [(ngModel)]="model.idTabulador" (change)="chgSalariodos()" id="ddlZonaPuesto">
@@ -143,13 +185,13 @@
                             </div>
                             <div class="col-sm-12 col-md-2 col-4">
                                 <div class="form-floating">
-                                    <input type="number" class="form-control" [(ngModel)]="model.sueldo" disabled  id="txtSueldoPuesto">
+                                    <input type="number" class="form-control" [(ngModel)]="model.sueldo" disabled id="txtSueldoPuesto">
                                     <label for="txtSueldoPuesto">Sueldo</label>
                                 </div>
                             </div>
                             <br />
                             <h5>Prestaciones</h5>
-                            <br />
+                            <hr />
                             <div class="row">
                                 <div class="col-sm-12 col-md-3 col-6 mb-3">
                                     <div class="form-floating">
@@ -165,26 +207,39 @@
                                     </div>
                                     <span *ngIf="ferr('vales')" class="text-danger">{{ terr('vales') }}</span>
                                 </div>
-                                <div class="col-sm-4 col-md-3 col-6 align-content-center align-items-center text-center">
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-12 align-content-center align-items-center mb-3">
                                     <div class="form-check">
                                         <label class="form-check-label">
                                             Dias festivos
                                             <input class="form-check-input" type="checkbox" [value]="model.diaFestivo" [(ngModel)]="model.diaFestivo" id="btnFestivoPuesto" />
+                                            <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="El calculo es basado en 7 dias">
+                                                <i class="fa fa-info-circle"></i>
+                                            </span>
                                         </label><br />
-                                        <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="EL calculo es basado en 7 dias">
-                                            <i class="fa fa-info-circle"></i>
-                                        </span>
                                     </div>
                                 </div>
-                                <div class="col-sm-4 col-md-3 col-6 align-content-center align-items-center text-center">
+                                <div class="col-sm-4 col-md-4 col-12 align-content-center align-items-center mb-3">
                                     <div class="form-check">
                                         <label class="form-check-label">
                                             Dias Domingos
                                             <input class="form-check-input" type="checkbox" [value]="model.diaDomingo" [(ngModel)]="model.diaDomingo" id="btndiaFestivo" />
+                                            <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="El calculo es (Salario diario * .25) * 4.33">
+                                                <i class="fa fa-info-circle"></i>
+                                            </span>
                                         </label><br />
-                                        <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="EL calculo es (Salario diario * .25) * 4.33">
-                                            <i class="fa fa-info-circle"></i>
-                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 col-md-4 col-12 align-content-center align-items-center mb-3">
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            Cubre descansos
+                                            <input class="form-check-input" type="checkbox" [value]="model.diaCubreDescanso" [(ngModel)]="model.diaCubreDescanso" id="btndiaCubreDescanso" />
+                                            <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="EL calculo es (Salario mensual / 30.4167) * 4.33">
+                                                <i class="fa fa-info-circle"></i>
+                                            </span>
+                                        </label><br />
                                     </div>
                                 </div>
                             </div>
@@ -200,6 +255,6 @@
             </div>
         </div>
     </div>
-    <toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
