--- a/SistemaVentasBatia/ClientApp/src/app/widgets/toast/toast.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/toast/toast.widget.html
@@ -1,5 +1,5 @@
-<!--<div class="position-fixed right-0 p-3" style="z-index: 11; right: 0; top: 70px;">
-    <div id="glotoast" class="toast" role="alert" data-delay="1500" aria-live="assertive" aria-atomic="true">
+<div class="position-fixed p-3" style="z-index: 1100; right: 0; top: 70px;">
+    <div id="glotoast" class="toast" role="alert" data-delay="3000" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <strong class="mr-auto">{{ isError ? 'Revisa' : 'Ok' }}</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
@@ -9,9 +9,10 @@
             {{ message }}
         </div>
     </div>
-</div>-->
+</div>
 
-<style>
+
+<!--<style>
     .glotoasttoast {
         max-width: 300px; /* Ancho máximo del Toast */
         max-height: 150px; /* Altura máxima del Toast */
@@ -29,4 +30,4 @@
             {{ message }}
         </div>
     </div>
-</div>
+</div>-->
